			CHANGELOG for KAME kit

$KAME: CHANGELOG,v 1.1210 2000/08/18 02:35:59 itojun Exp $

<200008>
Fri Aug 18 11:34:01 JST 2000  itojun@iijlab.net
	* netbsd/pkgsrc/net/zebra: upgrade to 0.88.

Thu Aug 17 19:27:34 JST 2000  itojun@iijlab.net
	* netbsd/pkgsrc/net/zebra: upgrade to 0.88pre2.

Thu Aug 17 10:19:13 JST 2000  itojun@iijlab.net
	* openbsd: change kernel headers to use "NEW_STRUCT_ROUTE" definition.
	  kernel can panic if you don't define it in kernel configuration file.

Wed Aug 16 15:41:28 JST 2000  itojun@iijlab.net
	* netbsd/pkgsrc/net/wget: upgrade to latest IPv6 patch.
	  IPv6 FTP is now available.

2000-08-16  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* bsdi4/sbin/ifconfig/ifconfig.c: set some IPv6 related parameters
	to a correct variable. Without this fix, for example, an IPv6
	anycast address couldn't be configured with the ifconfing command.

Tue Aug 15 22:28:09 2000  SUMIKAWA Munechika  <sumikawa@ebina.hitachi.co.jp>
	* freebsd3/ports/apache13: apache 1.3.12 + latest IPv6 patch
	* freebsd3/ports/mrt: mrt 2.2.2a-Aug11
	* freebsd3/ports/lynx: upgrade to 2.7.4dev7 which IPv6 patch was
	  merged.
	* freebsd3/ports/python: use latest IPv6 patch.

Tue Aug 15 18:16:14 JST 2000  itojun@iijlab.net
	* netbsd/pkgsrc/lang/python: use latest IPv6 patch.
	* netbsd/pkgsrc/lang/python-current: python 1.6b1 + IPv6 patch
	* netbsd/pkgsrc/www/apache13: apache 1.3.12 + latest IPv6 patch
	* netbsd/pkgsrc/net/mrt: mrt 2.2.2a-Aug11

Tue Aug 15 16:41:23 JST 2000  itojun@iijlab.net
	* netbsd: change kernel headers to use "NEW_STRUCT_ROUTE" definition.
	  kernel can panic if you don't define it in kernel configuration file.

Tue Aug 15 16:39:43 2000  SUMIKAWA Munechika  <sumikawa@ebina.hitachi.co.jp>
	* freebsd3/ports/postfix: postfix 20000531 + IPv6 patch.

Tue Aug 15 16:24:51 JST 2000  itojun@iijlab.net
	* kame/sys/net/if_stf.c, kame/sys/netinet/in_gif.c:
	  repair IN_MULTICAST() check for bsdi/freebsd.